Revision history for VMware::vCloud

NB: Skipped version numbers were never released.

VERSIONTAG DATETAG

  Added:
    VMware::vCloud - list_pvdcs()

  Improved:
    examples/list-pvds.pl - Now using VMware::vCloud

2.29 2013/03/25

  Added:
    Acknowledgement of David Gress as a contributor.
    VMware::vCloud - create_catalog(), delete_catalog()
    VMware::API::vCloud - catalog_create(), catalog_get_access(),
      catalog_set_access(), logout()*
	VMware::API::vCloud - POD noting the LoginUrl error.

  * Provided by David Gress
    
2.26 2013/03/19

  Added:
    VMware::API::vCloud - template_get_metadata(), vapp_get_metadata()
    VMware::API::vCloud - Started adding API documentation URLs as comments in 
                          front of each method.

  Improved:
    VMware::vCloud - list_vapps() & list_templates() - Now uses the current login 
      org a a parameter to list_vapps() to avoid pemission errors when logged in 
      as an Org Admin.
    VMware::vCloud - org_create() improved POD, added ldap_mode as a parameter.

2.22 2013/03/14

  Added:
    VMware::vCloud - admin_urls(), debug(), delete_org(), delete_org_network(), 
      delete_vdc(), disable_org(), disable_vdc(), enable_org(), enable_vdc(), 
      extensions(), get_pvdc(), list_external_networks(), list_portgroups(), 
      purge(), vimserver(), webclienturl()

  Improved:
    VMware::vCloud - get_org() - now returns hash or hashref depending on context.
    VMware::vCloud - Improved and reorganized POD.
    POD cleanup and formatting.

2.19 2013/03/13

  Added:
    VMware::vCloud - create_external_network()
    VMware::API::vCloud - admin(), admin_extension_get(), 
      admin_extension_vimServer_get(), delete(), get_raw(), org_create(), 
      org_list(), org_network_create(), org_vdc_create(), pvdc_get(), vdc_list()
    API version information is now read directly from offered versions.
    Learned variables and Raw responses now attached to $VMware::API::vCloud::self